fix empty item rendering white space issue

--- a/options/style.css
+++ b/options/style.css
@@ -1,6 +1,6 @@
 .options-container {
   margin: auto;
-  width: 30em;
+  max-width: 64em;
   display: grid;
   grid-auto-rows: auto;
 }
