--- a/shared/style.css
+++ b/shared/style.css
@@ -11,6 +11,7 @@ body {
 
   background-color: var(--app-bg);
   color: var(--default-text-c);
+  margin: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
